refactor: optimized for 1.21.11